--- a/rtm-algorithm-coin/algorithm-coin.html
+++ b/rtm-algorithm-coin/algorithm-coin.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="rtm-main/styles/main.css">
+    <link rel="stylesheet" href="../rtm-algorithm-coin/styles/algorithm-coin.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -49,7 +49,7 @@
         <nav class="rtm__main-navbar">
             <div class="rtm__main-menu-wrapper">
                 <div id="menu-button" class="rtm__main-menu-mobile">
-                    <img src="rtm-main/assets/mobile-menu.svg" alt="mobile menu svg">
+                    <img src="../rtm-algorithm-coin/assets/mobile-menu.svg" alt="mobile menu svg">
                     Menu
                 </div>
                 <p class="rtm__main-menu-logo">ReadyToMine</p>
@@ -61,28 +61,66 @@
         </nav>
     </header>
     <div class="rtm__main-content-wrapper">
-        <div class="rtm__main-logo rtm__main-logo--explore">
-            <div class="rtm__main-logo-wrapper">
-                <h1 class="rtm__main-logo-title">
-                    Explore
-                </h1>
-                <img src="rtm-main/assets/bitcoin.svg" alt="bitcoin title">
+        <div class="rtm__main-progress-wrapper">
+            <p class="rtm__main-progress-title">25% complete</p>
+            <progress max="100" value="25" class="rtm__main-progress-bar"></progress>
+        </div>
+        <div class="rtm__main-algorithms-wrapper">
+            <p class="rtm__main-algorithms-title">Choose an algorithm and a coin</p>
+            <div class="rtm__main-algorithms-content">
+                <div class="rtm__main-algorithms-item">
+                    <p class="rtm__main-algorithms-item-title">SHA-256</p>
+                    <p class="rtm__main-algorithms-item-text">Bitcoin, Bitcoin Cash, Bitcoin SV</p>
+                </div>
+                <div class="rtm__main-algorithms-item">
+                    <p class="rtm__main-algorithms-item-title">Sсrypt</p>
+                    <p class="rtm__main-algorithms-item-text">Litecoin + DOGE</p>
+                </div>
+                <div class="rtm__main-algorithms-item">
+                    <p class="rtm__main-algorithms-item-title">Ethash</p>
+                    <p class="rtm__main-algorithms-item-text">Ethereum Classic</p>
+                </div>
+                <div class="rtm__main-algorithms-item">
+                    <p class="rtm__main-algorithms-item-title">Equihash</p>
+                    <p class="rtm__main-algorithms-item-text">Zcash, Horizen</p>
+                </div>
+                <div class="rtm__main-algorithms-item">
+                    <p class="rtm__main-algorithms-item-title">X11</p>
+                    <p class="rtm__main-algorithms-item-text">Dash</p>
+                </div>
+                <div class="rtm__main-algorithms-item">
+                    <p class="rtm__main-algorithms-item-title">Blake2S</p>
+                    <p class="rtm__main-algorithms-item-text">KDA</p>
+                </div>
             </div>
-            <p class="rtm__main-logo-text">With ReadyToMine Team</p>
         </div>
-        <div class="rtm__main-logo rtm__main-logo--welcome">
-            <img src="rtm-main/assets/welcome-logo.svg" alt="welcome logo svg">
+    </div>
+    <div class="rtm__main-coins-wrapper">
+        <p class="rtm__main-coins-title">coin</p>
+        <div class="rtm__main-coins-content">
+            <div class="rtm__main-coins-item">
+                <p class="rtm__main-coins-item-text">Bitcoin SV</p>
+            </div>
+            <div class="rtm__main-coins-item">
+                <p class="rtm__main-coins-item-text">Bitcoin</p>
+            </div>
+            <div class="rtm__main-coins-item">
+                <p class="rtm__main-coins-item-text">Bitcoin Cash</p>
+            </div>
         </div>
-        <button class="rtm__main-btn">
-            <a href="../rtm-offer/rtm-algorithm-coin/algorithm-coin.html" class="rtm__main-btn-text">
-                Click to start
-            </a>
+    </div>
+    <div class="rtm__main-buttons">
+        <button class="rtm__main-button rtm__main-button--left">
+            <img src="../rtm-algorithm-coin/assets/button-arrow-left.svg" alt="arrow left">
+        </button>
+        <button class="rtm__main-button rtm__main-button--right">
+            <img src="../rtm-algorithm-coin/assets/button-arrow-right.svg" alt="arrow right">
         </button>
     </div>
-    <footer class="rtm__main-footer">
-        <p class="rtm__main-footer-copyright">2022 - 2023 Ready To Mine. All about mining equipment</p>
-    </footer>
 </div>
+<footer class="rtm__main-footer">
+    <p class="rtm__main-footer-copyright">2022 - 2023 Ready To Mine. All about mining equipment</p>
+</footer>
 <script>
     const menu = document.querySelector('#page-menu');
     const menuBtn = document.querySelector('#menu-button');
