--- a/rtm-algorithm-coin/algorithm-coin.html
+++ b/rtm-algorithm-coin/algorithm-coin.html
@@ -110,12 +110,12 @@
         </div>
     </div>
     <div class="rtm__main-buttons">
-        <button class="rtm__main-button rtm__main-button--left">
+        <a href="../index.html" class="rtm__main-button rtm__main-button--left">
             <img src="../rtm-algorithm-coin/assets/button-arrow-left.svg" alt="arrow left">
-        </button>
-        <button class="rtm__main-button rtm__main-button--right">
+        </a>
+        <a class="rtm__main-button rtm__main-button--right">
             <img src="../rtm-algorithm-coin/assets/button-arrow-right.svg" alt="arrow right">
-        </button>
+        </a>
     </div>
 </div>
 <footer class="rtm__main-footer">
