--- a/rtm-electricity/electricity.html
+++ b/rtm-electricity/electricity.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../rtm-algorithm-coin/styles/algorithm-coin.css">
+    <link rel="stylesheet" href="../rtm-electricity/styles/electricity.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -49,7 +49,7 @@
         <nav class="rtm__main-navbar">
             <div class="rtm__main-menu-wrapper">
                 <div id="menu-button" class="rtm__main-menu-mobile">
-                    <img src="../rtm-algorithm-coin/assets/mobile-menu.svg" alt="mobile menu svg">
+                    <img src="../rtm-electricity/assets/mobile-menu.svg" alt="mobile menu svg">
                     Menu
                 </div>
                 <p class="rtm__main-menu-logo">ReadyToMine</p>
@@ -62,59 +62,27 @@
     </header>
     <div class="rtm__main-content-wrapper">
         <div class="rtm__main-progress-wrapper">
-            <p class="rtm__main-progress-title">25% complete</p>
-            <progress max="100" value="25" class="rtm__main-progress-bar"></progress>
+            <p class="rtm__main-progress-title">75% complete</p>
+            <progress max="100" value="75" class="rtm__main-progress-bar"></progress>
         </div>
-        <div class="rtm__main-algorithms-wrapper">
-            <p class="rtm__main-algorithms-title">Choose an algorithm and a coin</p>
-            <div class="rtm__main-algorithms-content">
-                <div class="rtm__main-algorithms-item">
-                    <p class="rtm__main-algorithms-item-title">SHA-256</p>
-                    <p class="rtm__main-algorithms-item-text">Bitcoin, Bitcoin Cash, Bitcoin SV</p>
-                </div>
-                <div class="rtm__main-algorithms-item">
-                    <p class="rtm__main-algorithms-item-title">Sсrypt</p>
-                    <p class="rtm__main-algorithms-item-text">Litecoin + DOGE</p>
-                </div>
-                <div class="rtm__main-algorithms-item">
-                    <p class="rtm__main-algorithms-item-title">Ethash</p>
-                    <p class="rtm__main-algorithms-item-text">Ethereum Classic</p>
-                </div>
-                <div class="rtm__main-algorithms-item">
-                    <p class="rtm__main-algorithms-item-title">Equihash</p>
-                    <p class="rtm__main-algorithms-item-text">Zcash, Horizen</p>
-                </div>
-                <div class="rtm__main-algorithms-item">
-                    <p class="rtm__main-algorithms-item-title">X11</p>
-                    <p class="rtm__main-algorithms-item-text">Dash</p>
-                </div>
-                <div class="rtm__main-algorithms-item">
-                    <p class="rtm__main-algorithms-item-title">Blake2S</p>
-                    <p class="rtm__main-algorithms-item-text">KDA</p>
-                </div>
-            </div>
+        <div class="rtm__main-electricity-wrapper">
+            <p class="rtm__main-electricity-title">What is your electricity charge?</p>
         </div>
-    </div>
-    <div class="rtm__main-coins-wrapper">
-        <p class="rtm__main-coins-title">coin</p>
-        <div class="rtm__main-coins-content">
-            <div class="rtm__main-coins-item">
-                <p class="rtm__main-coins-item-text">Bitcoin SV</p>
-            </div>
-            <div class="rtm__main-coins-item">
-                <p class="rtm__main-coins-item-text">Bitcoin</p>
-            </div>
-            <div class="rtm__main-coins-item">
-                <p class="rtm__main-coins-item-text">Bitcoin Cash</p>
-            </div>
+        <div class="rtm__main-electricity-content">
+            <button class="rtm__main-electricity-content-button">—</button>
+            <div class="rtm__main-electricity-content-value">2.2</div>
+            <button class="rtm__main-electricity-content-button">+</button>
         </div>
+        <p class="rtm__main-electricity-subtitle">
+            please specify in USD
+        </p>
     </div>
     <div class="rtm__main-buttons">
-        <a href="../index.html" class="rtm__main-button rtm__main-button--left">
-            <img src="../rtm-algorithm-coin/assets/button-arrow-left.svg" alt="arrow left">
+        <a href="../rtm-asic/asic.html" class="rtm__main-button rtm__main-button--left">
+            <img src="../rtm-electricity/assets/button-arrow-left.svg" alt="arrow left">
         </a>
-        <a href="../rtm-asic/asic.html" class="rtm__main-button rtm__main-button--right">
-            <img src="../rtm-algorithm-coin/assets/button-arrow-right.svg" alt="arrow right">
+        <a class="rtm__main-button rtm__main-button--right">
+            <img src="../rtm-electricity/assets/button-arrow-right.svg" alt="arrow right">
         </a>
     </div>
 </div>
