--- a/rtm-algorithm-coin/algorithm-coin.html
+++ b/rtm-algorithm-coin/algorithm-coin.html
@@ -6,9 +6,6 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../rtm-algorithm-coin/styles/algorithm-coin.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <title>RTM Offer</title>
 </head>
 <body>
@@ -49,7 +46,11 @@
         <nav class="rtm__main-navbar">
             <div class="rtm__main-menu-wrapper">
                 <div id="menu-button" class="rtm__main-menu-mobile">
-                    <img src="../rtm-algorithm-coin/assets/mobile-menu.svg" alt="mobile menu svg">
+                    <svg width="29" height="12" viewBox="0 0 29 12" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M1 1H27.6667" stroke="currentColor" stroke-width="1.66667" stroke-linecap="round"/>
+                        <path d="M1 6H27.6667" stroke="currentColor" stroke-width="1.66667" stroke-linecap="round"/>
+                        <path d="M1 11H27.6667" stroke="currentColor" stroke-width="1.66667" stroke-linecap="round"/>
+                    </svg>
                     Menu
                 </div>
                 <p class="rtm__main-menu-logo">ReadyToMine</p>
@@ -62,8 +63,8 @@
     </header>
     <div class="rtm__main-content-wrapper">
         <div class="rtm__main-progress-wrapper">
-            <p class="rtm__main-progress-title">25% complete</p>
-            <progress max="100" value="25" class="rtm__main-progress-bar"></progress>
+            <p class="rtm__main-progress-title">0% complete</p>
+            <progress max="100" value="0" class="rtm__main-progress-bar"></progress>
         </div>
         <div class="rtm__main-algorithms-wrapper">
             <p class="rtm__main-algorithms-title">Choose an algorithm and a coin</p>
@@ -72,23 +73,23 @@
                     <p class="rtm__main-algorithms-item-title">SHA-256</p>
                     <p class="rtm__main-algorithms-item-text">Bitcoin, Bitcoin Cash, Bitcoin SV</p>
                 </div>
-                <div class="rtm__main-algorithms-item">
+                <div class="rtm__main-algorithms-item rtm__main-algorithms-item--disabled">
                     <p class="rtm__main-algorithms-item-title">Sсrypt</p>
                     <p class="rtm__main-algorithms-item-text">Litecoin + DOGE</p>
                 </div>
-                <div class="rtm__main-algorithms-item">
+                <div class="rtm__main-algorithms-item rtm__main-algorithms-item--disabled">
                     <p class="rtm__main-algorithms-item-title">Ethash</p>
                     <p class="rtm__main-algorithms-item-text">Ethereum Classic</p>
                 </div>
-                <div class="rtm__main-algorithms-item">
+                <div class="rtm__main-algorithms-item rtm__main-algorithms-item--disabled">
                     <p class="rtm__main-algorithms-item-title">Equihash</p>
                     <p class="rtm__main-algorithms-item-text">Zcash, Horizen</p>
                 </div>
-                <div class="rtm__main-algorithms-item">
+                <div class="rtm__main-algorithms-item rtm__main-algorithms-item--disabled">
                     <p class="rtm__main-algorithms-item-title">X11</p>
                     <p class="rtm__main-algorithms-item-text">Dash</p>
                 </div>
-                <div class="rtm__main-algorithms-item">
+                <div class="rtm__main-algorithms-item rtm__main-algorithms-item--disabled">
                     <p class="rtm__main-algorithms-item-title">Blake2S</p>
                     <p class="rtm__main-algorithms-item-text">KDA</p>
                 </div>
