--- a/rtm-search/search.html
+++ b/rtm-search/search.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../rtm-search/styles/search.css">
     <title>Search your device</title>
 </head>
-<body>
+<body class="body-search">
 <div id="page-menu" class="page__menu">
     <div class="page__menu-content">
         <div id="menu-close-btn" class="page__menu-content-close-btn-wrapper">
@@ -19,26 +19,26 @@
                 </svg>
             </div>
         </div>
-        <ul class="page__menu-content-list">
-            <li class="page__menu-content-list-item">
+        <div class="page__menu-content-list">
+            <a href="" class="page__menu-content-list-item">
                 Price list
                 <svg xmlns="http://www.w3.org/2000/svg" width="15" height="26" viewBox="0 0 15 26" fill="none">
                     <path d="M2.62402 2.5L13.124 13L2.62402 23.5" stroke="#777777" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
-            </li>
-            <li class="page__menu-content-list-item">
+            </a>
+            <a href="" class="page__menu-content-list-item">
                 Bonus programme
                 <svg xmlns="http://www.w3.org/2000/svg" width="15" height="26" viewBox="0 0 15 26" fill="none">
                     <path d="M2.62402 2.5L13.124 13L2.62402 23.5" stroke="#777777" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
-            </li>
-            <li class="page__menu-content-list-item">
+            </a>
+            <a href="" class="page__menu-content-list-item">
                 Contacts
                 <svg xmlns="http://www.w3.org/2000/svg" width="15" height="26" viewBox="0 0 15 26" fill="none">
                     <path d="M2.62402 2.5L13.124 13L2.62402 23.5" stroke="#777777" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
-            </li>
-        </ul>
+            </a>
+        </div>
     </div>
 </div>
 <div class="page__container">
@@ -53,10 +53,10 @@
                     </svg>
                     Menu
                 </div>
-                <p class="rtm__search-menu-logo">ReadyToMine</p>
+                <a href="" class="rtm__search-menu-logo">ReadyToMine</a>
                 <div class="rtm__search-menu-language-selector-wrapper">
-                    <div class="rtm__search-menu-language-selector rtm__search-menu-language-selector--active">En</div>
-                    <div class="rtm__search-menu-language-selector">Ru</div>
+                    <a href="" class="rtm__search-menu-language-selector rtm__search-menu-language-selector--active">En</a>
+                    <a href="" class="rtm__search-menu-language-selector">Ru</a>
                 </div>
             </div>
         </nav>
